--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,9 +14,9 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Set Up Godot
-        uses: Setheck/godot-action@v1
+        uses: actions/godot-action@v1
         with:
-          version: '3.4.0'
+          version: '4.1.3'
 
       - name: Run CI Script
         run: godot -s "scripts/ci.gd"
