--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
       - name: Checkout Repository
@@ -16,7 +16,7 @@ jobs:
       - name: Set Up Godot
         uses: actions/godot-action@v1
         with:
-          version: '4.1.3'
+          godot-version: 4.1.3
 
       - name: Run CI Script
-        run: godot -s "res://scripts/ci.gd"
+        run: godot -s ci.gd
