--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,4 +19,4 @@ jobs:
           godot-version: 4.1.3
 
       - name: Run CI Script
-        run: godot -s ci.gd
+        run: godot -s res://scripts/ci.gd
